--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
-    "@tailwindcss/vite": "^4.1.5",
-    "cropperjs": "^1.5.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-crop": "^11.0.10",
-    "react-router-dom": "^6.22.1",
-    "tailwindcss": "^4.1.5"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.3"
   }
 }
