--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "i18next": "^23.8.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^14.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^11.0.5"
